--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,6 @@
-[buil]
-  command = "node server.js"
-  publish="/build"
-  base="."
+[build]
+  functions = "functions/"
 [[redirects]]
-  from = "/api/*"
-  to = "/server.js"
+  from = '/*'
+  to = '/.netlify/functions/:splat'
   status = 200
