--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^5.13.7"
+    "mongodb": "^6.1.0",
+    "mongoose": "^5.13.21"
   }
 }
