--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "mongoose": "^5.13.21",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   }
 }
